<resources>
    <string name="app_name">ElQueue</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="background">Background</string>
    <string name="queue_icon">Queue icon</string>
    <string name="separator">Separator</string>

    <string name="status">Status</string>
    <string name="features">Features</string>
    <string name="about">About</string>
    <string name="pricing">Pricing</string>
    <string name="reviews">Reviews</string>
    <string name="contact">Contact</string>

    <string name="communicate">Communicate</string>

    <string name="user_icon">User icon</string>
    <string name="authentication">Authentication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="event">Event</string>
    <string name="organization">Organization</string>
    <string name="description">Description</string>
    <string name="join">Join</string>
    <string name="logout">Logout</string>

    <string name="number">Number</string>
    <string name="time">Time</string>
</resources>
