<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/features" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/pricing" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/reviews" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
