<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/color_white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivTypeIcon"
        android:layout_width="@dimen/queue_icon_size"
        android:layout_height="match_parent"
        android:contentDescription="@string/queue_icon"
        android:src="@drawable/cybersport"
        android:scaleType="centerCrop" />
    <ImageView
        android:layout_width="@dimen/queue_icon_size"
        android:layout_height="match_parent"
        android:contentDescription="@string/queue_icon"
        android:src="@drawable/white_transparent"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/queue_icon_size_minus"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_8"
                android:paddingBottom="0dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/text_size_18"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEvent"
                        android:layout_width="@dimen/text_view_size"
                        android:layout_height="wrap_content"
                        android:text="@string/event"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvOrganization"
                        android:layout_width="@dimen/text_view_size"
                        android:layout_height="wrap_content"
                        android:text="@string/organization"
                        android:layout_marginStart="@dimen/margin_8"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_gray_middle"
            android:contentDescription="@string/separator" />
        
    </LinearLayout>




</LinearLayout>